@@ -5,6 +5,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import lombok.CustomLog;
+import org.apache.commons.lang3.StringUtils;
 
 /**
  * Based on different operating systems, it resolves the path to the directory where an application can write to disk
@@ -16,22 +17,29 @@ public class DirectoryPathResolver {
 
     public static final String USER_HOME_PROPERTY = "user.home";
     public static final String OS_NAME_PROPERTY = "os.name";
-
+    public static final String TEMP_DIRECTORY_PROPERTY = "java.io.tmpdir";
     /**
      * We will default to writing the connection cache data in the default temp directory for each operating system
      * @return
      */
     public Path resolveFireboltJdbcDirectory() {
-        String userHome = System.getProperty(USER_HOME_PROPERTY);
         Path cacheDirectoryPath;
 
         String osName = System.getProperty(OS_NAME_PROPERTY).toLowerCase();
 
         if (osName.contains("win")) {
-            cacheDirectoryPath = Paths.get(System.getenv("LOCALAPPDATA"), FIREBOLT_JDBC_APP_NAME, "cache");
+            cacheDirectoryPath = Paths.get(System.getProperty(TEMP_DIRECTORY_PROPERTY), FIREBOLT_JDBC_APP_NAME);
+        } else if (osName.contains("mac")) {
+            // this is per user and will be deleted upon reboot or when the OS needs more disk space
+            String tempDirectory = System.getenv("TMPDIR");
+            cacheDirectoryPath = Path.of(tempDirectory, FIREBOLT_JDBC_APP_NAME);
         } else {
-            // for mac and linux temp location is the same
-            cacheDirectoryPath = Path.of(userHome, "Library", "Caches", FIREBOLT_JDBC_APP_NAME);
+            // for linux try the user specific temp directory. If that is not set then use the /tmp
+            String tempUserDirectory = System.getenv("XDG_RUNTIME_DIR");
+            if (StringUtils.isBlank(tempUserDirectory)) {
+                tempUserDirectory = Path.of("/tmp", System.getProperty(USER_HOME_PROPERTY)).toString(); // Fallback if not set
+            }
+            cacheDirectoryPath = Path.of(tempUserDirectory, FIREBOLT_JDBC_APP_NAME);
         }
 
         // Ensure cache directory exists
